--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
                 </div>
                 <div class="panel-body">
                     <button id="startGame" class="btn btn-danger center-block"><h2>Start Game!</h2></button>
+                    <div class="row">
+                        <div class="col-lg-4"><h2>TIME</h2></div>
+                        <div class="col-lg-4"><h2>CORRECT</h2></div>
+                        <div class="col-lg-4"><h2>INCORRECT</h2></div>
+                    </div>
+                    <div class="row">
+                        <div id="time" class="col-lg-4"><h2>0</h2></div>
+                        <div id="right" class="col-lg-4"><h2>0</h2></div>
+                        <div id="wrong" class="col-lg-4"><h2>0</h2></div>
+                    </div>
                 </div>
 
             </div>
@@ -33,5 +43,12 @@
         </div>
 
     </div>
+   <!-- footer -->
+   <div class="footer navbar-fixed-bottom">
+    <div class="col-lg-5"></div>
+    <div class="col-lg-7">
+        <span class="text-muted">Designed by Trevor in Charlotte</span>
+    </div>
+</div>   
 </body>
 </html>
