--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/javascript/app.js"></script>
     <title>Trivia Game</title>
 </head>
 <body>
@@ -27,14 +28,31 @@
                 <div class="panel-body">
                     <button id="startGame" class="btn btn-danger center-block"><h2>Start Game!</h2></button>
                     <div class="row">
-                        <div class="col-lg-4"><h2>TIME</h2></div>
-                        <div class="col-lg-4"><h2>CORRECT</h2></div>
-                        <div class="col-lg-4"><h2>INCORRECT</h2></div>
+                        <div class="col-lg-4 text-center"><h2>TIME</h2></div>
+                        <div class="col-lg-4 text-center"><h2>CORRECT</h2></div>
+                        <div class="col-lg-4 text-center"><h2>INCORRECT</h2></div>
                     </div>
                     <div class="row">
-                        <div id="time" class="col-lg-4"><h2>0</h2></div>
-                        <div id="right" class="col-lg-4"><h2>0</h2></div>
-                        <div id="wrong" class="col-lg-4"><h2>0</h2></div>
+                        <div id="timer" class="col-lg-4 text-center"><h2>30</h2></div>
+                        <div id="right" class="col-lg-4 text-center"><h2>0</h2></div>
+                        <div id="wrong" class="col-lg-4 text-center"><h2>0</h2></div>
+                    </div>
+                    <div class="row">
+                        <div id="question" class="col-lg-12 text-center"></div>
+                    </div>
+                    <div class="row">
+                        <div>
+                            <button id="buttonA" class="btn answerChoice"><h4>A</h4></button>
+                        </div>
+                        <div>
+                            <button id="buttonB" class="btn answerChoice"><h4>B</h4></button>
+                        </div>
+                        <div>
+                            <button id="buttonC" class="btn answerChoice"><h4>C</h4></button>
+                        </div>
+                        <div>
+                            <button id="buttonD" class="btn answerChoice"><h4>D</h4></button>
+                        </div>
                     </div>
                 </div>
 
